fix: change table align text

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
 footer {
   position: absolute;
   width: 60%;
-  top: 3150px;
+  top: 3300px;
   display: flex;
   align-items: end;
   justify-content: space-between;
@@ -40,6 +40,7 @@ div {
 table {
   margin-top: 40px;
   width: 100%;
+  text-align: center;
 }
 
 h2 {
